# Tennis-Score-Board

./: .dockerignore  .env.dist  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
alembic/: env.py
alembic/versions/: 2deb91427cfe_flat_match_structure.py  81aa794d6886_update_match_score.py  97398e388851_init.py  a6b549888a3b_initial_migration.py
app/: config.py  exceptions.py  factory.py  run.py  wsgi.py
app/controller/: __init__.py  controller.py
app/database/: create_tables.py  database.py
app/decorators/: router.py
app/middleware/: db_middleware.py
app/models/: match.py  player.py
app/repo/: match_repo.py  player_repo.py
app/repositories/: interfaces.py  match_repo.py  player_repo.py
app/routes/: routes.py
app/services/: match_service.py
app/templates/: hello.html  index.html
migrations/: create_tables.py
scripts/: create_migrations.sh  run_migrations.sh
src/mini_framework/: __init__.py
src/tennis_score_board/: config.py  factory.py  logger_setup.py
tennis_score_board/: exceptions.py  factory.py  run.py
tennis_score_board/controller/: controller.py
tennis_score_board/core/: request_handler.py  router.py
tennis_score_board/database/: database.py  transaction_manager.py
tennis_score_board/domain/: match.py  player.py
tennis_score_board/middleware/: __init__.py  db_middleware.py
tennis_score_board/models/: match.py  player.py
tennis_score_board/repositories/: interfaces.py  match_repo.py  player_repo.py
tennis_score_board/routes/: routes.py
tests/: test_match.py
(+37 files in other folders)
