[project]
name = "tennis-score-board"
version = "0.1.0"
description = "A tennis score board application"
authors = [{ name = "Y1-Bit", email = "y0749701@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "SQLAlchemy>=2.0.32",
    "mysql-connector-python>=9.0.0",
    "Jinja2>=3.1.4",
    "uWSGI>=2.0.26",
    "environs>=11.0.0",
    "alembic>=1.13.2",
    "pytest>=8.3.2",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tennis_score_board", "mini_framework"]
